# BK7239N_AT

./: .gitignore  Makefile  README.md
components/app/: Kconfig
components/at_server/: CMakeLists.txt  Kconfig  README.md  at_task.c  http_at.c  http_at.h  mqtt_at.c  mqtt_at.h
components/bk_airkiss/: airkiss.c  airkiss_main.c  airkiss_main.h  bk_airkiss.c
components/bk_ate/: ate.c
components/bk_bluetooth/: CMakeLists.txt  Kconfig
components/bk_cli/: CMakeLists.txt  Kconfig  cli.h  cli_adc.c  cli_aon_rtc.c  cli_ble.c  cli_config.h  cli_dwt.c  cli_fatfs.c  cli_flash.c  cli_flash_api.c  cli_flash_test.c  cli_fpb.c  cli_gpio.c  cli_gpio_api.c  cli_i2c.c  cli_i2c_api.c  cli_i2s.c  cli_interrupt.c  cli_mac802154.c  cli_main.c  cli_mem.c  cli_misc.c  cli_netif.c  cli_nvs.c  cli_ota.c  cli_otp.c  cli_partition.c  cli_phy.c  cli_psram.c  cli_pwm.c  cli_pwr.c  cli_reg.c  cli_sd.c  cli_sdio_host.c  cli_sdio_slave.c  cli_section.h  cli_spi_api.c  cli_temp_detect.c  cli_timer.c  (+9 more)
components/bk_common/: bk_feature.c
components/bk_httpc/: httpc.c  httpc.h
components/bk_https/: bk_https.c  bk_ssl.c
components/bk_init/: CMakeLists.txt  bk_init.c  components_init.c
components/bk_libs/: CMakeLists.txt  Kconfig  verify_info.cmake
components/bk_log/: Kconfig
components/bk_mac802154/: CMakeLists.txt  Kconfig
components/bk_mcuboot/: CMakeLists.txt  Kconfig
components/bk_mcuboot/bl2/: CMakeLists.txt
components/bk_mcuboot/bl2/components/cmsis/: cmsis_gcc.h  core_star.h
components/bk_mcuboot/bl2/components/config/: config.cmake  config_default.cmake  idk_config.h.in  mcuboot_default_config.cmake  set_config.cmake
components/bk_mcuboot/bl2/components/config/build_type/: debug.cmake  minsizerel.cmake  release.cmake
components/bk_mcuboot/bl2/components/download/: CMakeLists.txt  bl_bk_hci_protocol.c  bl_bk_hci_protocol.h  bl_bk_reg.h  bl_config.h  bl_extflash.c  bl_extflash.h  bl_key_injection.c  bl_key_injection.h  bl_spi.c  bl_spi.h  bl_uart.c  bl_uart.h  bootloader.c
components/bk_mcuboot/bl2/components/download/inc/: download_types.h  mbedtls_config.h
components/bk_mcuboot/bl2/components/mbedtls/: CMakeLists.txt
components/bk_mcuboot/bl2/components/mcuboot/: CMakeLists.txt
components/bk_mcuboot/bl2/components/mcuboot/bootutil/: CMakeLists.txt
components/bk_mcuboot/bl2/components/mcuboot/bootutil/include/bootutil/: bootutil_log.h  bootutil_public.h  image.h
components/bk_mcuboot/bl2/components/mcuboot/bootutil/src/: bootutil_misc.c  bootutil_priv.h  image_validate.c  loader.c  swap_scratch.c
components/bk_mcuboot/bl2/components/mcuboot/include/: bk_flash_map.h  bootutil_priv.h  common_loader.h  ow_loader.h  xip_loader.h
components/bk_mcuboot/bl2/components/mcuboot/include/flash_map_backend/: flash_map_backend.h
components/bk_mcuboot/bl2/components/mcuboot/include/mcuboot_config/: mcuboot_config.h.in  mcuboot_logging.h
components/bk_mcuboot/bl2/components/mcuboot/src/: bk_flash_map.c  bk_loader.c  bl2_main.c  bl2_securedebug.c  boot_hal_bl2.c  bootutil_public.c  common_loader.c  decompress_bl2.c  flash_map.c  flash_map_extended.c  flash_map_legacy.c  hooks_bl2.c  ow_loader.c  ow_pubkey.c  shared_data.c  xip_loader.c  xip_pubkey.c
components/bk_mcuboot/bl2/middleware/: CMakeLists.txt
components/bk_mcuboot/bl2/middleware/arch/cm33/: arch_interrupt.c  cache.c  mpu.c
components/bk_mcuboot/bl2/middleware/arch/cm33/include/: arch_interrupt.h
components/bk_mcuboot/bl2/middleware/soc/bk7236/: CMakeLists.txt
components/bk_mcuboot/bl2/middleware/soc/bk7236/cmsis_core/: bk7236.h  system_cmsdk_bk7236.c
components/bk_mcuboot/bl2/middleware/soc/bk7236/flash_layout/: region_defs.h
components/bk_mcuboot/bl2/middleware/soc/bk7236/link/: bl2.ld
components/bk_mcuboot/bl2/middleware/soc/bk7236/startup/: bl2_startup.c
components/bk_mcuboot/bl2/middleware/soc/bk7236/tinysoc/: CMakeLists.txt
components/bk_mcuboot/bl2/middleware/soc/bk7236n/: CMakeLists.txt
components/bk_mcuboot/bl2/middleware/soc/bk7236n/cmsis_core/: bk7236n.h  cmsis.h  mpu_cfg.c  platform_irq.h  system_cmsdk_bk7236n.c
components/bk_mcuboot/bl2/middleware/soc/bk7236n/config/: config.cmake
components/bk_mcuboot/bl2/middleware/soc/bk7236n/flash_layout/: flash_layout.h  region_defs.h
components/bk_mcuboot/bl2/middleware/soc/bk7236n/link/: bl2.ld
components/bk_mcuboot/bl2/middleware/soc/bk7236n/startup/: bl2_startup.c
components/bk_mcuboot/bl2/middleware/soc/bk7236n/tinysoc/: CMakeLists.txt
components/bk_mcuboot/bl2/middleware/soc/bk7239n/: CMakeLists.txt
components/bk_mcuboot/bl2/middleware/soc/bk7239n/cmsis_core/: bk7239n.h  cmsis.h  mpu_cfg.c  system_cmsdk_bk7239n.c
components/bk_mcuboot/bl2/middleware/soc/bk7239n/flash_layout/: region_defs.h
components/bk_mcuboot/bl2/middleware/soc/bk7239n/link/: bl2.ld
components/bk_mcuboot/bl2/middleware/soc/bk7239n/startup/: bl2_startup.c
components/bk_mcuboot/bl2/middleware/soc/bk7239n/tinysoc/: CMakeLists.txt
components/bk_mcuboot/bl2/tools/cmake/: toolchain.cmake
components/bk_netif/: bk_at_netif.c  bk_netif.c
components/bk_ota/: CMakeLists.txt  Kconfig  ota.c  ota_bl2.c  ota_common.c  ota_confirm.c  ota_ow.c  ota_verify.c  ota_xip.c
components/bk_persist_config/: CMakeLists.txt  Kconfig
components/bk_phy/: CMakeLists.txt  Kconfig
components/bk_pm/: CMakeLists.txt  Kconfig
components/bk_rtos/: CMakeLists.txt  Kconfig  platform_stub.c
components/bk_startup/: CMakeLists.txt  Kconfig  system_main.c
components/bk_system/: CMakeLists.txt  Kconfig  bk_platform.c  bk_platform.h  mac.c  printf.c  printf_base.c  reboot.c
components/bk_uid/: bk_uid_adaptor.c  bk_uid_adaptor.h
components/bk_usb/: CMakeLists.txt  Kconfig
components/bk_vfs/: bk_filesystem.h  bk_posix.h  bk_vfs.c  fatfs_adapter.c  littlefs_adapter.c
components/bk_wifi/: CMakeLists.txt  Kconfig
components/cmsis/: CMakeLists.txt
components/compress/: CMakeLists.txt  decompress.c
components/easy_flash/: Kconfig
components/fatfs/: disk_io.c  test_fatfs.c  test_fatfs.h
components/http/: utils_httpc.c
include/: CMakeLists.txt
include/os/: mem.h  (+1 more)
(+1314 files in other folders)
